fixed bug to honor words in text wrap

--- a/style.css
+++ b/style.css
@@ -20,3 +20,7 @@ p {
 	position: relative; 
 	display: inline-block;
 }
+
+.word {
+	display: inline-block;
+}
